fix: handle shift release not on button

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -354,7 +354,7 @@ button {
   margin: auto;
   --gap: 5px;
   --btn-width: 45px;
-  --key-margin: 3px 0;
+  --key-margin: 2px 0;
 }
 
 .keyboard__layout {
@@ -411,7 +411,6 @@ button {
 .key[data-aux-key]:before {
   content: attr(data-aux-key);
   font-size: 0.8em;
-  align-self: flex-start;
 }
 .key:hover {
   background: var(--bg-button-hover);
